objects/Account.object
<CustomObject>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <label>Partner Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Partner</fullName>
                    <default>true</default>
                    <label>Partner</label>
                </value>
                <value>
                    <fullName>Reseller</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Alliance Partner</fullName>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                </value>
                <value>
                    <fullName>System Integrator</fullName>
                </value>
                <value>
                    <fullName>Service &amp; Support Specialist</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Dealer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partnership_Status__c</fullName>
        <label>Partnership Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Percent_Won__c</fullName>
        <formula>Closed_Won_Opptys__c / ( Closed_Lost_Opptys__c +  Closed_Won_Opptys__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Won</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Personal_Assets__c</fullName>
        <label>Personal Assets</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Programs__c</fullName>
        <label>Programs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Reseller Program</fullName>
                </value>
                <value>
                    <fullName>Services Program</fullName>
                </value>
                <value>
                    <fullName>Referral Program</fullName>
                </value>
                <value>
                    <fullName>Worldwide Reseller Agreement</fullName>
                </value>
                <value>
                    <fullName>Consulting Program</fullName>
                </value>
                <value>
                    <fullName>Distributor Program</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Propensity_to_Buy__c</fullName>
        <label>Propensity to Buy</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ptnr_Onbd_Fmwk__Onboarding_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Onboarding Template</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Ptnr_Onbd_Fmwk__Onboarding__c.Ptnr_Onbd_Fmwk__Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Ptnr_Onbd_Fmwk__Onboarding__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rating_Indicator__c</fullName>
        <formula>IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;&amp; IF (Value__c &gt; 0, &apos;015Hr000003iK9k&apos;, &apos;015Hr000003iK9l&apos;),&apos;&apos;,22,22) &amp;&quot;&quot;&amp; 
IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;&amp; IF (Value__c &gt; 1, &apos;015Hr000003iK9k&apos;, &apos;015Hr000003iK9l&apos;),&apos;&apos;,22,22) &amp;&quot;&quot;&amp; 
IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;&amp; IF (Value__c &gt; 2, &apos;015Hr000003iK9k&apos;, &apos;015Hr000003iK9l&apos;),&apos;&apos;,22,22) &amp;&quot;&quot;&amp; 
IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;&amp; IF (Value__c &gt; 3, &apos;015Hr000003iK9k&apos;, &apos;015Hr000003iK9l&apos;),&apos;&apos;,22,22) &amp;&quot;&quot;&amp; 
IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;&amp; IF (Value__c &gt; 4, &apos;015Hr000003iK9k&apos;, &apos;015Hr000003iK9l&apos;),&apos;&apos;,22,22)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__AssetQuantitiesCombined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option to combine quantities of multiple assets for the same product into one line when renewal quote is generated.</description>
        <inlineHelpText>Option to combine quantities of multiple assets for the same product into one line when renewal quote is generated.</inlineHelpText>
        <label>Combine Asset Quantities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CoTermedContractsCombined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that controls whether assets and subscriptions from multiple co-teremed contracts are rolled up together. By default, each co-termed contract generates a separate group on renewal quote.</description>
        <inlineHelpText>Enable to combine assets and subscriptions from multiple co-termed contracts. By default, each co-termed contract generates a separate group on renewal quote.</inlineHelpText>
        <label>Combine Co-Termed Contracts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CoTerminationEvent__c</fullName>
        <description>Determines when contracts are co-terminated.</description>
        <inlineHelpText>Determines when contracts are co-terminated.</inlineHelpText>
        <label>Co-Termination Event</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SBQQ__ContractCoTermination__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Add-on</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ContractCoTermination__c</fullName>
        <description>Determines how service and subscription contracts for this customer are co-terminated.</description>
        <inlineHelpText>Determines how service and subscription contracts for this customer are co-terminated.</inlineHelpText>
        <label>Contract Co-Termination</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                    <default>true</default>
                    <label>Never</label>
                </value>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Prompt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Default opportunity for this account used by an e-Commerce module to obtain the customer&apos;s price book and associate with &quot;shopping cart&quot; quotes.</description>
        <inlineHelpText>Default opportunity for this account used by an e-Commerce module to obtain the customer&apos;s price book and associate with &quot;shopping cart&quot; quotes.</inlineHelpText>
        <label>Default Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>WebAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__IgnoreParentContractedPrices__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select if contracted prices should not be inherited from the parent account.</description>
        <inlineHelpText>Select if contracted prices should not be inherited from the parent account.</inlineHelpText>
        <label>Ignore Parent Contracted Prices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PreserveBundle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select to maintain bundle hierarchy on renewal quotes and amendments</description>
        <inlineHelpText>Select checkbox to maintain bundle hierarchy on renewal quotes and amendments.</inlineHelpText>
        <label>Preserve Bundle Structure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceHoldEnd__c</fullName>
        <description>End date for any price hold that may be in effect.</description>
        <inlineHelpText>Enter date until which the prices must be held.</inlineHelpText>
        <label>Price Hold End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalModel__c</fullName>
        <description>The option to distinguish between Subscription or Asset based renewal.</description>
        <inlineHelpText>Choose Asset Based to make renewals based off of an account&apos;s Assets or choose Subscription based to makes renewals based off of subscriptions created from a quote.</inlineHelpText>
        <label>Renewal Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asset Based</fullName>
                </value>
                <value>
                    <fullName>Contract Based</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalPricingMethod__c</fullName>
        <description>Method for pricing products on renewal.</description>
        <inlineHelpText>Use &quot;Same&quot; to keep the same price paid last time. Use &quot;List&quot; to use current list price. Use &quot;Uplift&quot; to use the price paid last time plus some uplift.</inlineHelpText>
        <label>Renewal Pricing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Same</fullName>
                    <default>true</default>
                    <label>Same</label>
                </value>
                <value>
                    <fullName>List</fullName>
                </value>
                <value>
                    <fullName>Uplift</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__TaxExempt__c</fullName>
        <description>Selected if this account has active certificates</description>
        <inlineHelpText>Selected if this account has active certificates</inlineHelpText>
        <label>Tax-Exempt</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scorecard_Last_Updated__c</fullName>
        <label>Scorecard Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Service_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>What service territory is this account located in</inlineHelpText>
        <label>Service Territory</label>
        <referenceTo>ServiceTerritory</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShippingGeo__c</fullName>
        <label>ShippingGeo</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Show_Partner_Users__c</fullName>
        <formula>HYPERLINK(&quot;/servlet/servlet.Integration?lid=01NHr000000kbcl&amp;eid=&quot; &amp; Id &amp; &quot;&amp;ic=1&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=015Hr000003iK9u&quot;, &quot;Show Partner Users&quot;),&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show Partner Users</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_on_Checkin_Map__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show on Checkin Map</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supplier_Category__c</fullName>
        <label>Supplier Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>API</fullName>
                </value>
                <value>
                    <fullName>CCFS</fullName>
                </value>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>External MFG</fullName>
                </value>
                <value>
                    <fullName>Logistics</fullName>
                </value>
                <value>
                    <fullName>Metals</fullName>
                </value>
                <value>
                    <fullName>Packaging</fullName>
                </value>
                <value>
                    <fullName>Plastics</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>R&amp;D</fullName>
                </value>
                <value>
                    <fullName>CLPS</fullName>
                </value>
                <value>
                    <fullName>FTMR</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URLsrc__c</fullName>
        <formula>IF(CONTAINS($Api.Enterprise_Server_URL_290,&quot;.force.com&quot;), 
MID( $Api.Enterprise_Server_URL_290, FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0)), 
FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0))+1) - FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0)) 
) , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URLsrc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_Closed_Won_Opportunties__c</fullName>
        <label>Value Closed Won Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Value_Open_Opportunties__c</fullName>
        <label>Value of Open Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>This field drives the Value Indicator field.  Enter a value of 1-5.</description>
        <label>Value</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vertical_Coverage__c</fullName>
        <label>Vertical Coverage</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Biotechnology</fullName>
                </value>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Electronics</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Food &amp; Beverage</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Machinery</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Not For Profit</fullName>
                </value>
                <value>
                    <fullName>Recreation</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Telecommunications</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
                <value>
                    <fullName>Utilities</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Win_Loss_Ratio__c</fullName>
        <formula>IMAGE(&apos;http://chart.apis.google.com/chart?cht=p3&amp;chs=300x100&amp;chd=t:&apos;+ 
TEXT( Percent_Won__c ) + &apos;,&apos; + TEXT(1 - Percent_Won__c) + 
&apos;&amp;chco=236FBD&amp;chl=Won (&apos;+TEXT( ROUND(Percent_Won__c * 100, 0) )+&apos;%)|Lost (&apos;+TEXT(ROUND((1- Percent_Won__c) * 100, 0) )+&apos;%)&amp;chf=bg,s,FFFFFF&apos; 






, &apos;no data available&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Win Loss Ratio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Default work type to use for this account for field service activity</inlineHelpText>
        <label>Work Type</label>
        <referenceTo>WorkType</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Type_for_Quote_Creation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Type for Quote Creation</label>
        <referenceTo>WorkType</referenceTo>
        <relationshipLabel>Accounts (Work Type for Quote Creation)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>YTD_Revenue_Generated__c</fullName>
        <label>YTD Revenue Generated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>analyticsdemo_batch_id__c</fullName>
        <label>analyticsdemo_batch_id__c</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__BillToContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__CustomerProfileId__c</fullName>
        <label>Customer Profile Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__DefaultPaymentType__c</fullName>
        <label>Default Payment Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__CustomField1__c</fullName>
        <label>Custom Field 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__CustomField2__c</fullName>
        <label>Custom Field 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__DataId__c</fullName>
        <description>B2B Commerce internal use only except when used with ccApiTestData.</description>
        <externalId>true</externalId>
        <inlineHelpText>B2B Commerce internal use only except when used with ccApiTestData.</inlineHelpText>
        <label>DataId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__E_AccountGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Group</label>
        <referenceTo>ccrz__E_AccountGroup__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__PreventAddrBookSave__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, users cannot save new addresses to the address book.</description>
        <label>Prevent Address Book Saves</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__PreventNewAddrCheckout__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, the user should not be able to add new addresses during checkout</description>
        <label>Prevent New Addresses at Checkout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__PreventNewBillAddrCO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, the user should not be able to add new billing addresses during checkout</description>
        <label>Prevent New Checkout Billing Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__SourceSystem__c</fullName>
        <label>Source System</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__TaxExemptAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is the field to indicate whether an account is tax exempt.</description>
        <inlineHelpText>This is the field to indicate whether an account is tax exempt.</inlineHelpText>
        <label>TaxExemptAccount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__UsedByCloudcraze__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Used by Cloudcraze Customer Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ckz_Account_Hierarchy_Id18s__c</fullName>
        <label>Account Hierarchy Id18s</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ckz_B2B_Credit_Limit__c</fullName>
        <label>B2B Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ckz_B2B_Reward_Points_Balance__c</fullName>
        <label>B2B Reward Points Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ckz_B2B_Reward_Points_Cost_Multiplier__c</fullName>
        <defaultValue>0.01</defaultValue>
        <description>Amount of points needed per dollar cost. For example, 0.2 means 5 points = $1. Default of 0.01 means 100 points = $1.</description>
        <inlineHelpText>Amount of points needed per dollar cost. For example, 0.2 means 5 points = $1. Default of 0.01 means 100 points = $1.</inlineHelpText>
        <label>B2B Reward Points Cost Multiplier</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ckz_B2B_Reward_Points_Earned_Multiplier__c</fullName>
        <defaultValue>1</defaultValue>
        <description>How many points earned for every dollar spent.</description>
        <inlineHelpText>How many points earned for every dollar spent.</inlineHelpText>
        <label>B2B Reward Points Earned Multiplier</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ckz_B2B_Reward_Points_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>B2B Reward Points Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ckz_Id18__c</fullName>
        <label>Id18</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__AssignmentRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Maps Assignment Rule</label>
        <referenceTo>maps__AssignmentRule__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>mcsocsel10__Topic_Profile_Id__c</fullName>
        <description>The ID of the topic profile this account is associated with.</description>
        <label>Topic Profile Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Reps_Trained__c</fullName>
        <label>% of Reps Trained</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>partdir_mp__Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approver_Of</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Partner_Marketplace_Lead_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Marketplace Lead Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>All_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>EnterpriseAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Enterprise</value>
        </filters>
        <label>Enterprise Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MFG_Distributors</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.MFG_Distributor</value>
        </filters>
        <label>Distributors</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>PersonAccount.PersonAccounts</value>
        </filters>
        <label>*My Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NA_Partners</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Partner</value>
        </filters>
        <filters>
            <field>ACCOUNT.ADDRESS1_COUNTRY</field>
            <operation>equals</operation>
            <value>USA</value>
        </filters>
        <filters>
            <field>ACCOUNT.ADDRESS1_COUNTRY</field>
            <operation>equals</operation>
            <value>CA</value>
        </filters>
        <label>NA  Partners</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PartnerAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Partner_Type__c</columns>
        <columns>Partner_Program_Level__c</columns>
        <columns>Partner_Certification__c</columns>
        <columns>Region__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Partner</value>
        </filters>
        <label>All Partner Accounts</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <group>Channel_Managers</group>
        </sharedTo>
    </listViews>
</CustomObject>